--- a/assets/css/final_83d433b8.css
+++ b/assets/css/final_83d433b8.css
@@ -1964,6 +1964,72 @@ img {
   }
 }
 
+.carousel__smaller_title {
+  color: #000000;
+  font-size: 14px;
+
+  margin:15px 0px 100px 0px;
+}
+@media only screen and (min-width: 300px) {
+  .carousel__smaller_title {
+    color: #000000;
+
+    font-size: 14px;
+    margin:15px 0px 25px 0px;
+
+  }
+}
+
+@media only screen and (min-width: 830px) {
+  .carousel__smaller_title {
+    color: #000000;
+    font-size: 18px;
+    margin:10px 0px 40px 0px;
+
+  }
+}
+
+@media only screen and (min-width: 1060px) {
+  .carousel__smaller_title {
+    color: #000000;
+    font-size: 20px;
+    margin:100px 30px 10px 30px;
+  }
+}
+
+.carousel__title {
+  color: #000000;
+  font-size: 23px;
+
+  margin:15px 0px 100px 0px;
+}
+@media only screen and (min-width: 300px) {
+  .carousel__title {
+    color: #000000;
+
+    font-size: 24px;
+    margin:15px 0px 25px 0px;
+
+  }
+}
+
+@media only screen and (min-width: 830px) {
+  .carousel__title {
+    color: #000000;
+    font-size: 28px;
+    margin:10px 0px 40px 0px;
+
+  }
+}
+
+@media only screen and (min-width: 1060px) {
+  .carousel__title {
+    color: #000000;
+    font-size: 33px;
+    font-weight: 800;
+    margin:0px 30px 40px 30px;
+  }
+}
 
 .carousel__desc {
   color: #000000;
@@ -4512,11 +4578,11 @@ button {
 }
 
 .header_icon__logo {
-width: 90px;
+width: 170px;
   display: inline-block;
   line-height: 1;
   margin-left: -25px;
-  margin-top: -15px;
+  margin-top: 0px;
 }
 
 @media only screen and (min-width: 760px) {
@@ -4527,7 +4593,7 @@ width: 90px;
     margin-top: -50px;
   }
   .header_icon__logo {
-    width: 90px;
+    width: 180px;
   }
 }
 
@@ -4536,7 +4602,7 @@ width: 90px;
     margin-bottom: 10px
   }
   .header_icon__logo {
-    width: 90px;
+    width: 190px;
   }
 }
 
@@ -4576,7 +4642,7 @@ width: 90px;
   .header__nav--main {
     width: 720px;
     margin-bottom: 0;
-    margin-left: 60px;
+    margin-left: auto;
     text-align: left
   }
 }
